css/default.css
/* ... */
#floating-header.hidden {
    bottom: -2.5em;
}
#floating-header.hidden .link-chain .link.page-title {
    display: none;
}

#floating-header .link-chain {
    padding: 3px 6px 6px 6px;
    font-size: calc(1rem * 8/9);
    text-align: center;
}
#floating-header .link-chain .link {
    font-weight: 600;
}
#floating-header .link-chain .link + .link::before {
    content: "\200B\2002·\2002"
}
#floating-header .link-chain .link.ellipsis::before {
    content: "\200B\2002";
}
#floating-header .link-chain .link.page-title {
    font-variant-caps: small-caps;
    font-weight: normal;
    letter-spacing: -0.25px;
}
#floating-header .link-chain.truncate-page-title .link.page-title,
#floating-header.hidden .link-chain .link.page-title {
    display: inline-block;
    white-space: nowrap;
    max-width: calc(100% - 12px);
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: bottom;
}

#floating-header .scroll-indicator {
    height: var(--GW-floating-header-scroll-indicator-thickness);
    margin: 0 -8px;
    background-image: linear-gradient(var(--GW-floating-header-scroll-indicator-color),
                                      var(--GW-floating-header-scroll-indicator-color));
    background-position: 0 0;
    background-repeat: no-repeat;
    background-size: 0 0;
}

/*┌─────────────────────────────────────┐*/
/*│ Desktop version (for wide screens). │*/
/*└─────────────────────────────────────┘*/

@media (hover: hover) and (max-width: 1760px) {
    #floating-header {
        display: none;
    }
}
@media (hover: hover) and (min-width: 1761px) {
    #floating-header {
        width: calc(50vw - (var(--GW-body-max-width) / 2 + 64px));
        max-width: var(--GW-sidenotes-max-width);
        min-height: unset;
        box-shadow:
            0 0  0 1px var(--GW-body-background-color),
            0 0  3px var(--GW-body-background-color),
            0 0  5px var(--GW-body-background-color),
            0 0  9px var(--GW-body-background-color),
            0 0 17px var(--GW-body-background-color);
        border-bottom: 1px solid var(--GW-floating-header-scroll-indicator-color);
        pointer-events: none;
        left: unset;
        right: calc(50% + (var(--GW-body-max-width) / 2) + 64px);
        bottom: unset;
        top: 0;
    }
	#floating-header.hidden {
		bottom: unset;
		top: -2.5em;
	}
    #floating-header > * {
        pointer-events: auto;
    }
    #floating-header .scroll-indicator {
        margin: 0;
    }
    #floating-header .link-chain {
        padding: 7px 10px 8px 10px;
    }
    #floating-header .link-chain .link {
        display: block;
    }
    #floating-header .link-chain .link.page-title {
        margin: 0 0.75em;
    }
    #floating-header .link-chain .link.page-title + .link {
        margin-top: 0.5em;
    }
    #floating-header .link-chain .link:not(.page-title) {
        text-align: left;
        padding-left: calc((var(--link-index) - 1) * 1.25em);
    }
    #floating-header .link-chain .link:not(.page-title) a {
        font-size: calc(1em * (1 - (0.05 * (var(--link-index) - 1))));
    }
    #floating-header .link-chain .link::before {
        display: none;
    }

    /*  No floating header on /index.
     */
    body.page-index #floating-header {
        display: none;
    }
}


/***************/
/* READER MODE */
/***************/

/*┌───────────────────────────────────────────┐*/
/*│ Masked links key toggle info alert panel. │*/
/*└───────────────────────────────────────────┘*/

#masked-links-key-toggle-info-alert {
    position: absolute;
    background-color: var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-background-color);
    color: var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-color);
    text-shadow:
        0 0 1px var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color),
        0 0 3px var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color),
        0 0 5px var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color);
    padding: 0.5em 1em;
    left: 2px;
    bottom: 1.5em;
    font-family: var(--GW-sans-serif-font-stack);
    font-weight: 700;
    pointer-events: none;
}
#masked-links-key-toggle-info-alert.hidden {
    visibility: hidden;
    opacity: 0;
    transition:
        visibility 0.15s ease,
        opacity 0.15s ease;
}
#masked-links-key-toggle-info-alert .icon {
    display: inline-flex;
    width: 1.25em;
    filter: drop-shadow(0 0 3px var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color));
    margin: 0 0.75em 0 0;
    position: relative;
    top: 0.15em;
}
#masked-links-key-toggle-info-alert .key {
    border: 1px solid var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-key-icon-border-color);
    padding: 0.05em 0.375em 0.125em 0.375em;
    display: inline-block;
    border-radius: 4px;
    margin: 0 0.1875em 0 0.125em;
    background-color: var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-key-icon-background-color);
    box-shadow:
        1px 1px 3px 0 var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color);
    font-variant-caps: small-caps;
}


/******************/
/* MODE SELECTORS */
/******************/

.mode-selector button:disabled {
    cursor: default;
}

/**********************************/
/*  Mode selectors in page toolbar.
 */

#page-toolbar .dark-mode-selector {
    order: 1;
}
#page-toolbar .reader-mode-selector {
    order: 2;
}
#page-toolbar .extracts-mode-selector {
    order: 3;
}
#page-toolbar #google-search {
    order: 4;
}

#page-toolbar .mode-selector button .label {
    text-underline-position: from-font;
    text-underline-offset: -1px;
    text-decoration: none;
}
#page-toolbar .mode-selector button.selected .label {
    text-decoration: underline from-font;
}
#page-toolbar .mode-selector button.active .label {
    text-decoration: dotted underline from-font;
}
/* ... */

